tests/build/cases/widget/error_first_token.stderr
error: expected `when`, `child`, `remove` or a property declaration
 --> cases/widget/error_first_token.rs:8:9
  |
8 |         =
  |         ^

error: expected property path
  --> cases/widget/error_first_token.rs:13:13
   |
13 |             =
   |             ^

error: expected inherited property ident
  --> cases/widget/error_first_token.rs:19:13
   |
19 |             =
   |             ^
